--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LShop | The Best Fashion on Earth!</title>
+    <link rel="stylesheet" href="css/style1.css" />
+    <style>
+      .purple {
+        color: purple;
+      }
+    </style>
   </head>
   <body>
     <h1>Welcome to LShop</h1>
     <p>The Best Fashion on earth!</p>
     <img src="img/logo.png" alt="logo" height="100px" />
-    <img src="img/user/1.jpg" alt="user" />
+    <img src="img/user/1.jpg" alt="user" class="profil" />
     <hr />
     <a href="https://google.com">Google</a> |
     <a href="https://youtube.com">Youtube</a> |
@@ -28,5 +34,11 @@
         <td>Iin Sholihin</td>
       </tr>
     </table>
+    <br />
+    <br />
+    <p style="color: blue">Warna biru ini menggunakan inline-CSS</p>
+    <p class="purple">Untuk warna purple ini diatur pada internal-css</p>
+    <p>Foto di atas dan di bawah ini diatur dengan external-CSS</p>
+    <img src="img/user/3.jpg" alt="user3" class="profil" />
   </body>
 </html>
