--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LShop | The Best Fashion on Earth!</title>
+
+    <!-- memanggil external CSS -->
     <link rel="stylesheet" href="css/style1.css" />
+
+    <!-- memanggil external JS -->
+    <script src="js/myjs1.js"></script>
+
     <style>
       .purple {
         color: purple;
@@ -45,8 +51,11 @@
     <!-- JAVASCRIPT -->
     <!-- ========================================= -->
     <hr />
-    <h2>Javascript</h2>
-    Nama
+    <h2>Javascript Inline</h2>
+    <button onclick="alert('Halo Javascript!!')">Click me!</button>
+    <hr />
+    <h2>Javascript Internal</h2>
+    <div>Nama kamu:</div>
     <input type="text" id="nama" maxlength="20" />
     <button onclick="halo()">Submit</button>
     <script>
@@ -59,5 +68,10 @@
         }
       }
     </script>
+
+    <hr />
+    <h2>Javascript External</h2>
+    <button onclick="tampilTanggal()">Tampilkan tanggal</button>
+    <div id="tanggal"></div>
   </body>
 </html>
