--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LShop | The Best Fashion on Earth!</title>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+
     <!-- memanggil external CSS -->
     <link rel="stylesheet" href="css/style1.css" />
 
