--- a/layout.html
+++ b/layout.html
@@ -45,6 +45,48 @@
             <img src="img/hero1.png" alt="hero" class="img-hero" />
           </div>
         </section>
+
+        <!-- PRODUK SECTION ================= -->
+        <section id="produk" class="section">
+          <div class="section-title">
+            <h2>Produk kami</h2>
+            <p>Sub Judul</p>
+          </div>
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+            architecto quam voluptatem debitis laudantium enim a corrupti,
+            ducimus vel ad asperiores libero illum dolor! Inventore magni ad
+            itaque doloremque nisi!
+          </div>
+        </section>
+
+        <!-- KERANJANG SECTION ================= -->
+        <section id="keranjang" class="section section-bg">
+          <div class="section-title">
+            <h2>Keranjang Belanja</h2>
+            <p>Sub Judul</p>
+          </div>
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+            architecto quam voluptatem debitis laudantium enim a corrupti,
+            ducimus vel ad asperiores libero illum dolor! Inventore magni ad
+            itaque doloremque nisi!
+          </div>
+        </section>
+
+        <!-- PRODUK SECTION ================= -->
+        <section id="toko" class="section">
+          <div class="section-title">
+            <h2>Toko Kami</h2>
+            <p>Sub Judul</p>
+          </div>
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+            architecto quam voluptatem debitis laudantium enim a corrupti,
+            ducimus vel ad asperiores libero illum dolor! Inventore magni ad
+            itaque doloremque nisi!
+          </div>
+        </section>
       </main>
     </div>
   </body>
