--- a/layout.html
+++ b/layout.html
@@ -52,11 +52,54 @@
             <h2>Produk kami</h2>
             <p>Sub Judul</p>
           </div>
-          <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-            architecto quam voluptatem debitis laudantium enim a corrupti,
-            ducimus vel ad asperiores libero illum dolor! Inventore magni ad
-            itaque doloremque nisi!
+          <div class="mb-4">Tampil Produk 1</div>
+          <div class="mb-4">Tampil Produk 2</div>
+          <div class="mb-4">Tampil Produk 3</div>
+          <div class="p-2 fitur-admin">
+            <h3>Fitur Admin | Tambah Produk</h3>
+            <form method="post">
+              <div class="form-group mb-2">
+                <label for="namaProduk">Nama Produk</label>
+                <input
+                  type="text"
+                  id="namaProduk"
+                  name="namaProduk"
+                  class="form-control"
+                />
+              </div>
+              <div class="form-group mb-2">
+                <label for="harga">Harga</label>
+                <input
+                  type="number"
+                  id="harga"
+                  name="harga"
+                  class="form-control"
+                />
+              </div>
+              <div class="form-group mb-2">
+                <label for="gender">Untuk Gender</label>
+                <div>
+                  <input type="radio" name="gender" id="genderL" value="L" />
+                  <label for="genderL">Pria</label>
+                </div>
+                <div>
+                  <input type="radio" name="gender" id="genderP" value="P" />
+                  <label for="genderP">Wanita</label>
+                </div>
+              </div>
+              <div class="form-group mb-2">
+                <label for="imageProduk">Image Produk</label>
+                <input
+                  type="file"
+                  id="imageProduk"
+                  name="imageProduk"
+                  class="form-control"
+                />
+              </div>
+              <div class="form-group">
+                <button class="btn btn-primary w-100">Simpan</button>
+              </div>
+            </form>
           </div>
         </section>
 
