--- a/layout.html
+++ b/layout.html
@@ -65,6 +65,9 @@
                   id="namaProduk"
                   name="namaProduk"
                   class="form-control"
+                  required
+                  minlength="3"
+                  maxlength="30"
                 />
               </div>
               <div class="form-group mb-2">
@@ -74,16 +77,31 @@
                   id="harga"
                   name="harga"
                   class="form-control"
+                  min="1000"
+                  max="999999"
+                  required
                 />
               </div>
               <div class="form-group mb-2">
                 <label for="gender">Untuk Gender</label>
                 <div>
-                  <input type="radio" name="gender" id="genderL" value="L" />
+                  <input
+                    type="radio"
+                    name="gender"
+                    id="genderL"
+                    value="L"
+                    required
+                  />
                   <label for="genderL">Pria</label>
                 </div>
                 <div>
-                  <input type="radio" name="gender" id="genderP" value="P" />
+                  <input
+                    type="radio"
+                    name="gender"
+                    id="genderP"
+                    value="P"
+                    required
+                  />
                   <label for="genderP">Wanita</label>
                 </div>
               </div>
@@ -94,6 +112,8 @@
                   id="imageProduk"
                   name="imageProduk"
                   class="form-control"
+                  required
+                  accept=".jpg"
                 />
               </div>
               <div class="form-group">
